--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.18",
+    "aws4": "^1.12.0",
     "dotenv": "^16.4.5",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
